--- a/riscv.cfg
+++ b/riscv.cfg
@@ -30,7 +30,7 @@ tester             = (Optional, defaults to hw_vendor)
 
 # System Description
 hw_model           = Unknown HW Model
-hw_memory          = 4 GB
+hw_memory          = 8 GB
 hw_disk            = 1 1TB Mystery Disk
 hw_vendor          = Berkeley Architecture Research
 hw_other           = None
@@ -107,9 +107,9 @@ default=default=default=default:
 # those settings by default, however some of the SPEC benchmarks require 
 # glibc.
 
-CC  = riscv64-unknown-linux-gnu-gcc -static -Wl,-Ttext-segment,0x10000
-CXX = riscv64-unknown-linux-gnu-g++ -static -Wl,-Ttext-segment,0x10000
-FC  = riscv64-unknown-linux-gnu-gfortran -static -Wl,-Ttext-segment,0x10000
+CC  = riscv64-unknown-linux-gnu-gcc -static 
+CXX = riscv64-unknown-linux-gnu-g++ -static 
+FC  = riscv64-unknown-linux-gnu-gfortran -static 
 
 #####################################################################
 # Optimization
@@ -135,7 +135,13 @@ PORTABILITY    = -DSPEC_CPU_LP64
 CPORTABILITY   = -DSPEC_CPU_LINUX_X64 -std=gnu89 
 
 416.gamess=default=default=default:
-CPORTABILITY   =  -funconstrained-commons
+FPORTABILITY   = -funconstrained-commons -std=legacy
+
+447.dealII=default=default=default:
+CXXPORTABILITY = -fpermissive
+
+450.soplex=default=default=default:
+CXXPORTABILITY = -std=c++03
 
 462.libquantum=default=default=default:
 CPORTABILITY   =  -DSPEC_CPU_LINUX
@@ -151,10 +157,10 @@ CXXPORTABILITY = -DSPEC_CPU_LINUX
 
 481.wrf=default=default=default:
 CPORTABILITY   = -DSPEC_CPU_CASE_FLAG -DSPEC_CPU_LINUX
+FPORTABILITY   = -std=legacy
  
 #####################################################################
 # Notes
 #####################################################################
 
 notes_submit_005 =See the configuration file for details.
- 
